# OpenColorIO

./: .gitignore  CMakeLists.txt  README.md  aces2-studio.ocio  aces2.glsl  pyproject.toml  setup.cfg  setup.py
.github/workflows/: analysis_workflow.yml  ci_workflow.yml  dependencies_latest.yml  gpu_workflow.yml  pip_workflow.yml  platform_latest.yml  wheel_workflow.yml
docs/guides/contributing/: repository_structure.rst
docs/quick_start/: for_config_authors.rst  for_devs.rst
include/OpenColorIO/: OpenColorIO.h  OpenColorTransforms.h  OpenColorTypes.h
share/cmake/macros/: GetPythonPreCommand.cmake
share/cmake/modules/: FindExtPackages.cmake  FindHalf.cmake  FindImath.cmake  FindOpenEXR.cmake  FindOpenImageIO.cmake  Findexpat.cmake  Findlcms2.cmake  Findminizip-ng.cmake  Findpybind11.cmake  Findpystring.cmake  Findyaml-cpp.cmake
share/cmake/utils/: CompilerFlags.cmake  CppVersion.cmake
src/OpenColorIO/: ACES2.md  CMakeLists.txt  Config.cpp  Context.cpp  FileConverter.cpp  GpuShaderUtils.cpp  Metadata.cpp  ParseUtils.cpp  PrivateTypes.h
src/OpenColorIO/fileformats/: FileFormatCTF.cpp  FileFormatResolveCube.cpp
src/OpenColorIO/transforms/: FileTransform.cpp  FileTransform.h
src/apps/ocioconvert/: CMakeLists.txt  main.cpp
src/apps/ociodisplay/: CMakeLists.txt  aces1.glsl  aces1.msl  aces2.glsl  aces2.msl  main.cpp  tables.h
src/apputils/: CMakeLists.txt  imageio.cpp  imageio.h
tests/cmake-consumer/: CMakeLists.txt.in
tests/cpu/: CMakeLists.txt
tests/gpu/: FixedFunctionOp_test.cpp
tests/python/: OpenColorIOTestSuite.py  ProcessorTest.py
(+58 files in other folders)
