[metadata]
author = OpenColorIO Developers
author_email = ocio-dev@lists.aswf.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Topic :: Software Development :: Libraries :: Python Modules
description = OpenColorIO (OCIO) is a complete color management solution geared towards motion picture production with an emphasis on visual effects and computer animation
license = Copyright Contributors to the OpenColorIO Project.
long_description = file: README.md, LICENSE
name = OpenColorIO
version = 2.0.0

[options]
zip_safe = False
